7.x compatibility - Watcher max_iterations with foreach action